teljesen elfelejtettem commitolni, de kész :D

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,14 @@
         android:text="Hozzádadás"
         android:textSize="20dp"
         android:id="@+id/buttonHozzaad"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Lista"
+        android:textSize="17dp"
+        android:id="@+id/buttonLista"
+        />
+
 
 
 
